# semantic-diff

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md
src/json_semantic_diff/: __init__.py  api.py  cache.py  comparator.py  protocols.py  scorer.py
src/json_semantic_diff/algorithm/: __init__.py  config.py  costs.py  matcher.py  normalizer.py  sted.py
src/json_semantic_diff/backends/: __init__.py  fastembed.py  openai.py  static.py
src/json_semantic_diff/integrations/: __init__.py  _braintrust.py  _langsmith.py  _pytest_plugin.py  _weave.py
src/json_semantic_diff/tree/: __init__.py  builder.py  nodes.py
src/semantic_diff/: __init__.py  api.py  cache.py  comparator.py  protocols.py  result.py  scorer.py
src/semantic_diff/algorithm/: __init__.py  costs.py  sted.py
src/semantic_diff/backends/: __init__.py  fastembed.py  openai.py  static.py
src/semantic_diff/integrations/: __init__.py  _braintrust.py  _langsmith.py  _pytest_plugin.py  _weave.py
src/semantic_diff/tree/: __init__.py  builder.py  normalizer.py
tests/: test_api.py  test_cache.py  test_comparator.py  test_config_extensions.py  test_placeholder.py  test_result.py
tests/accuracy/: test_discrimination.py  test_similarity_corpus.py
tests/accuracy/fixtures/: similarity_pairs.json
tests/algorithm/: __init__.py  test_config.py  test_costs.py  test_integration.py  test_matcher.py  test_normalizer.py  test_sted.py
tests/backends/: test_fastembed.py  test_openai.py  test_protocol.py  test_static.py
tests/benchmarks/: conftest.py  test_performance.py
tests/integration/: test_braintrust_scorer.py  test_consistency.py  test_embedding_cache.py  test_langsmith_evaluator.py  test_public_api.py  test_pytest_plugin.py  test_weave_scorer.py
tests/packaging/: test_packaging.py
tests/tree/: __init__.py  test_builder.py  test_nodes.py  test_normalizer.py
tests/unit/: test_scorer.py
